# pg_bestmatch.rs

./: .gitignore  .taplo.toml  .typos.toml  Cargo.toml  LICENSE  README.md  pg_bestmatch.control
.cargo/: audit.toml
.github/workflows/: release.yml  rust.yml  update_vendor.yml
scripts/: package.sh  update_vendor.sh
src/: lib.rs
src/sql/: finalize.sql  template.sql
src/tokenizer/: mod.rs
tools/: schema-codegen.sh  schema.sh
