[package]
name = "pg_bestmatch"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_bestmatch"
path = "./src/bin/pgrx_embed.rs"

[features]
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]

[dependencies]
pgrx = { version = "=0.12.0-alpha.1", default-features = false, features = [] }
rand = "0.8.5"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }

[patch.crates-io]
pgrx = { git = "https://github.com/tensorchord/pgrx.git", branch = "v0.12.0-alpha.1-patch2" }
